--- a/design/css/photogrammetry.css
+++ b/design/css/photogrammetry.css
@@ -15,7 +15,6 @@
   font-weight: normal;
   vertical-align: top;
   text-align: center;
-  padding-bottom: 35px;
   color: white;
   text-transform: uppercase;
   padding-top: 90px;
